# raytracer

./: CMakeLists.txt  Doxygen-Style Comments.txt  README.md  generate.sh  image.ppm  notes.md  test.sh
include/: camera.cpp  camera.h
include/hittable/: hittable.h  hittable_list.h  sphere.h  utility.h
include/primitives/: color.h  constants.h  interval.h  ray.h  sandbox.h  utility.h  vec3.h
sample_images/: gradient_pink_to_yellow.ppm  image.ppm
sample_images/previous/: failed_gradient_diagonal.ppm
src/: color.h  hittable.h  main.cc  main.cpp  ray.h  test.cpp  utility.h  vec3.h  viewport.cc
src/basic/: vec3.h
src/hittable/: hittable_list.h
